@@ -7106,6 +7106,32 @@ char getForceSpawn( char *inEmail, ForceSpawnRecord *outRecordToFill ) {
 
 
 
+static void makeOffspringSayMarker( int inPlayerID, int inIDToSkip ) {
+    
+    LiveObject *playerO = getLiveObject( inPlayerID );
+    
+    for( int i=0; i<players.size(); i++ ) {
+        LiveObject *o = players.getElement( i );
+        
+        if( o->id != inPlayerID && o->id != inIDToSkip ) {
+            
+            if( o->ancestorIDs->getElementIndex( inPlayerID ) != -1 ) {
+                // this player is an ancestor of this other
+                
+                // make other say ++, but only so this player can hear it
+
+                char *message = autoSprintf( "PS\n"
+                                             "%d/0 +FAMILY+\n#",
+                                             o->id );
+                sendMessageToPlayer( playerO, message, strlen( message ) );
+                delete [] message;
+                }
+            }
+        }
+    }
+
+
+
 
 
 // for placement of tutorials out of the way 
@@ -8882,6 +8908,15 @@ int processLoggedInPlayer( char inAllowReconnect,
     for( int i=0; i<newObject.ancestorIDs->size(); i++ ) {
         int id = newObject.ancestorIDs->getElementDirect( i );
         
+        if( id == newObject.id ) {
+            continue;
+            }
+        
+        // skip this baby when saying ++
+        // we are already getting a pointer to them, probably
+        makeOffspringSayMarker( id, newObject.id );
+        
+
         if( id == newObject.parentID ) {
             continue;
             }
